<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#151B8D"
    android:orientation="vertical"
    android:weightSum="1" >

    <TextView
        android:id="@+id/welcomePrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="true" />

    <Button
        android:id="@+id/playnowbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".20"
        android:text="@string/_new_game"
        android:textColor="#8C8615" >
    </Button>

    <Button
        android:id="@+id/profilebutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".20"
        android:text="@string/_profile"
        android:textColor="#8C8615" >
    </Button>




    <Button
        android:id="@+id/leaderbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".20"
        android:text="@string/_leaderboard"
        android:textColor="#8C8615" >
    </Button>

</LinearLayout>