<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFA500"
    android:orientation="vertical" >

    <Button
        android:id="@+id/ready_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="readyToPlay"
        android:text="@string/ready_button_text" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <ListView
            android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:divider="#FFA500"
            android:dividerHeight="1dp" >
        </ListView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/invitee_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invitee_header"
                android:textColor="#000000" />

            <ScrollView
                android:id="@+id/scrollView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/invitee_list"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:text="@string/none"
                        android:textColor="#000000" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>