<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:editable="true"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#FFA500"
            android:gravity="center_horizontal"
            android:onClick="goToGame"
            android:text="@string/_new_game" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#000000"
            android:gravity="center_horizontal"
            android:onClick="goToProfile"
            android:text="@string/_profile"
            android:textColor="#FFA500" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#FFA500"
            android:gravity="center_horizontal"
            android:onClick="goToLeaderBoard"
            android:text="@string/_leaderboard" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/troncar"
            android:contentDescription="@string/_new_game"
            android:onClick="goToGame" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/profile"
            android:contentDescription="@string/_profile"
            android:onClick="goToProfile" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/trophy"
            android:contentDescription="@string/_leaderboard"
            android:onClick="goToLeaderBoard" />
    </LinearLayout>

</LinearLayout>